--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">CS4720 Android Project</string>
 
     <string name="action_settings">Settings</string>
-    <string name="gps_button">Your Location!</string>
+    <string name="gps_button">Start the GPS Service</string>
 </resources>
