--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,17 @@
 <resources>
     <string name="app_name">CS4720 Android Project</string>
-    <string name="title_activity_2">Activity 2</string>
+    <string name="title_list_activity">List Activity</string>
 
     <string name="action_settings">Settings</string>
     <string name="gps_button">Start the GPS Service</string>
-    <string name="activity2_button">Go to activity 2</string>
-    <string name="add_item_button">Add item</string>
+    <string name="activity2_button">View Card List</string>
+    <string name="add_item_button">Add Card</string>
     <string name="add_item_text">Enter item name</string>
     <string name="ms1_about">Click on the Activity 2 button to go to a list view where you can enter list items.
         Click on the GPS button to start a GPS service.</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
