Added button to view all the trades that have been made in a dialog listview

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="send_message_button">Send Message</string>
     <string name="add_card_button">Add Card</string>
     <string name="add_item_text">Enter card name</string>
-    <string name="view_cards_button">View Cards</string>
+    <string name="view_cards_button">All Cards</string>
     <string name="fragmentEditText1_label">Expansion</string>
     <string name="fragmentEditText2_label">Language</string>
     <string name="ms1_about">Click on the Activity 2 button to go to a list view where you can enter list items.
@@ -20,7 +20,8 @@
     <string name="map_fragment_title">Google Maps</string>
     <string name="location_title_hint">Enter New Marker Title</string>
     <string name="location_description_hint">Enter New Marker Description</string>
-    <string name="location_button">Add Marker</string>
+    <string name="location_button">Add Trade</string>
+    <string name="view_markers_button">All Trades</string>
     <string name="clear_list_button">Clear List</string>
 
     <string-array name="condition_array">
