Changed app icon and title

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CS4720 Android Project</string>
+    <string name="app_name">Mobile Trade Binder</string>
     <string name="title_list_activity">List Activity</string>
 
     <string name="action_settings">Settings</string>
@@ -12,14 +12,12 @@
     <string name="view_cards_button">All Cards</string>
     <string name="fragmentEditText1_label">Expansion: </string>
     <string name="fragmentEditText2_label">Language: </string>
-    <string name="ms1_about">Click on the Activity 2 button to go to a list view where you can enter list items.
-        Click on the GPS button to start a GPS service.</string>
     <string name="fragmentLabel3">Condition: </string>
     <string name="my_cards_fragment_title">My Cards</string>
     <string name="my_trades_fragment_title">My Trades</string>
     <string name="map_fragment_title">Google Maps</string>
-    <string name="location_title_hint">Enter New Marker Title</string>
-    <string name="location_description_hint">Enter New Marker Description</string>
+    <string name="location_title_hint">Who are you trading with?</string>
+    <string name="location_description_hint">What are the details of the trade?</string>
     <string name="location_button">Add Trade</string>
     <string name="view_markers_button">All Trades</string>
     <string name="clear_list_button">Clear List</string>
