--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,12 @@
     <string name="open_camera_button">Add Image</string>
     <string name="delete_card_button">Delete Card</string>
     <string name="trade_dialog_text">All Trades</string>
+    <string name="about_button">About</string>
+    <string name="welcome_message">Welcome to Mobile Trade Binder! Add cards to your trade binder
+        by clicking the Add Card and All Cards buttons. You can keep track of cards you are
+        looking for and add pictures of cards you have for trade. You can also keep track of your
+        trades using the Add Trade and All Trades buttons. Trades will show up in the map
+        view to show you where your scheduled trades are.</string>
 
     <string-array name="condition_array">
         <item>NM</item>
